# sellier

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/: settings.json
.claude/agents/: ci-diagnose.md  refactor-changes.md  review-functional.md  review-security.md  self-review.md
.claude/commands/: pre-commit.md
.claude/rules/: commits.md  design-principles.md  security.md  tests.md
.claude/skills/implement-change/: SKILL.md
src/sellier/: __init__.py  cli.py  scaffolder.py
src/sellier/templates/: CLAUDE.md
src/sellier/templates/.claude/agents/: ci-diagnose.md  review-security.md  self-review.md
src/sellier/templates/.claude/commands/: giddy-up.md  pre-commit.md  saddle-up.md
src/sellier/templates/.claude/rules/: design-principles.md  tests.md
src/sellier/templates/.claude/skills/implement-change/: SKILL.md
tests/: test_cli.py  test_scaffolder.py
