[project]
name = "sellier"
version = "0.1.2"
description = "Scaffold a Claude Code agent harness into any project"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "Ian Johnson" }]
keywords = ["claude", "claude-code", "agent", "harness", "scaffold"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
]
dependencies = [
    "typer>=0.12",
]

[project.scripts]
sellier = "sellier.cli:app"

[project.urls]
Homepage = "https://github.com/tacoda/sellier"
Issues = "https://github.com/tacoda/sellier/issues"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.15.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
    ".env",
    ".env.*",
    "/dist",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sellier"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
